# Novabot

./: .dockerignore  .easignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.linux.yml  docker-compose.yml  docker-entrypoint.sh  mkdocs.yml  release-app.sh  release-beta.sh  release.sh
.beads/: .gitignore  issues.jsonl  metadata.json
.beads/hooks/: post-checkout  post-merge  pre-commit  pre-push  prepare-commit-msg
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: area-label.yml  build-installer-windows.yml  server-test.yml
.husky/: pre-commit
app/: .easignore  App.tsx  README.md  app.json  eas.json  package-lock.json  package.json  vitest.config.ts
app/plugins/: withSerialNativeBuild.js
app/scripts/: build-android-apk.sh
bootstrap/src/: ble.ts  server.ts
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  index.css
docs/: TESTER-GUIDE.md  portable-map-export-import.md
docs/api/: authentication.md  cloud-api.md  dashboard-api.md  mower-api.md  overview.md
docs/architecture/: hardware.md  network.md  overview.md
docs/ble/: charger-provisioning.md  commands.md  mower-provisioning.md  overview.md
docs/firmware/: ai-perception.md  charger.md  custom-firmware.md  lora-commands.md  mower.md  revert-to-stock.md
installer/: .gitignore  README.md  electron-builder.yml  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  tsconfig.renderer.json  vite.config.ts
manuals/: .gitignore  README.md
mapping/: PHASE1_FOLLOWUPS.md  README.md  deploy.sh  requirements.txt  wrapper.sh
mower/: decision_assistant.py  robot_decision.py  service_handlers.py  state_machine.py
research/: anonymize_cloud_devices.js  build_custom_firmware.sh  camera_stream.py  cloud_devices_anonymous.json  cloud_scanner.js  decompile_coverage_planner.java  decompile_mapgen.java  decompile_mapgen.py  decompile_savemap_caller.java  extended_commands.py  lfin1231000241-null-and-offline-diagnose.md  opennova_discovery.py  recover_maps_from_zip.sh  recover_maps_sweep.sh  seam_fix_daemon.py  test_extended_commands_tuning.py  unicom_mirror.py
research/coverage-native/: .dockerignore  CMakeLists.txt  Dockerfile.build  THIRD_PARTY_NOTICES.md
research/coverage-native/compat/ros/: assert.h  console.h
research/coverage-native/include/coverage_native/: contour_bridge.h  grid_plan.h  params.h  planner.h  preprocess.h  tsp.h  world_convert.h  world_plan.h
research/coverage-native/oracle/: gen_oracle.sh  missing-adversarial-cases.tsv  verify_oracle.sh
research/coverage-native/oracle/cases/: debug_sh_home0_map1.pgm  debug_sh_map.pgm  debug_sh_map0.pgm  lfin1231000211_backup_map0.pgm  live_lfin2230700238_20260611_map0.pgm  manifest.tsv  replay_demo_show.pgm  replay_test_low_efficiency.pgm  replay_zxl_own_house.pgm  starts.tsv
research/coverage-native/oracle/goldens/: manifest.tsv
research/coverage-native/oracle/goldens/grid/debug_sh_home0_map1/s0/: auto.json  dir0.json  dir45.json
research/coverage-native/oracle/goldens/grid/debug_sh_home0_map1/s1/: dir0.json  dir45.json  dir90.json
research/coverage-native/oracle/goldens/grid/lfin1231000211_backup_map0/s0/: auto.json  dir0.json  dir45.json
research/coverage-native/oracle/goldens/grid/lfin1231000211_backup_map0/s1/: auto.json  dir0.json  dir90.json
research/coverage-native/oracle/goldens/grid/replay_demo_show/s0/: auto.json  dir0.json  dir45.json  dir90.json
research/coverage-native/oracle/goldens/grid/replay_demo_show/s1/: auto.json  dir0.json  dir45.json  dir90.json
research/coverage-native/oracle/goldens/grid/replay_test_low_efficiency/s0/: auto.json  dir0.json  dir45.json  dir90.json
research/coverage-native/oracle/goldens/grid/replay_test_low_efficiency/s1/: auto.json  dir0.json  dir45.json  dir90.json
research/coverage-native/oracle/goldens/logs/debug_sh_home0_map1/s0/: auto.stderr  dir0.stderr  dir45.stderr  dir90.stderr
research/coverage-native/oracle/goldens/logs/debug_sh_home0_map1/s1/: auto.stderr  dir0.stderr  dir45.stderr  dir90.stderr
research/coverage-native/oracle/goldens/logs/lfin1231000211_backup_map0/s0/: auto.stderr  dir0.stderr  dir45.stderr  dir90.stderr
research/coverage-native/oracle/goldens/logs/lfin1231000211_backup_map0/s1/: auto.stderr  dir0.stderr  dir45.stderr  dir90.stderr
research/coverage-native/oracle/goldens/logs/replay_demo_show/s0/: auto.stderr  dir0.stderr  dir45.stderr  dir90.stderr
research/coverage-native/oracle/goldens/logs/replay_demo_show/s1/: auto.stderr  dir0.stderr  dir45.stderr  dir90.stderr
research/coverage-native/oracle/goldens/logs/replay_test_low_efficiency/s0/: auto.stderr  dir0.stderr  dir45.stderr  dir90.stderr
research/coverage-native/oracle/goldens/logs/replay_test_low_efficiency/s1/: auto.stderr  dir0.stderr  dir45.stderr  dir90.stderr
research/coverage-native/oracle/goldens/world/: manifest.tsv
research/coverage-native/oracle/goldens/world/debug_sh_home0_map0/: planned_path.json
research/coverage-native/oracle/goldens/world/debug_sh_map0/: current_planned_path.json
research/coverage-native/oracle/goldens/world/lfin1231000211_backup_map0/: current_planned_path.json  planned_path.json
research/coverage-native/oracle/goldens/world/live_lfin2230700238_20260611_map0/: start_pose.json
research/coverage-native/oracle/live/lfin2230700238_20260611_map0/: map0.yaml  map_info.json
research/coverage-native/oracle/live/lfin2230700238_20260611_map0/planned_path/: current_planned_path.json  planned_path.json
research/coverage-native/src/: contour_bridge.cc  coverage_grid_plan_main.cc  grid_plan.cc  params.cc  planner.cc  preprocess.cc  smoke_bcd_sweep.cc  tsp.cc  world_convert.cc  world_plan.cc
research/coverage-native/tests/: oracle_full_corpus.py  oracle_replay_demo_auto.py  test_vendor_glue.cc
scripts/: build-coverage-native-image.sh
server/: .eslintrc.cjs  diagnose-cloud.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
server/src/: index.ts
tools/: mqtt_node_aes_validate.py  mqtt_node_capture.py
(+920 files in other folders)
